создан первый экран

--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./vendor/fonts/fonts.css">
     <title>Куда я поеду</title>
 </head>
-<body>
-    <section class="header"></section>
+<body class="page">
+    <section class="header">
+
+        <nav class="nav nav_header">
+            <ul class="nav__links">
+                <li class="nav__link"><a href="#" class="link_decoration">Мечты</a></li>
+                <li class="nav__link"><a href="#" class="link_decoration">Ожидания</a></li>
+                <li class="nav__link"><a href="#"class="link_decoration">Реальность</a></li>
+            </ul>
+            <a href="#" class="nav__complain link_decoration">Пожаловаться</a>
+        </nav>
+
+        <div class="content">
+            <div class="text">
+                <p class="content__text">Куда я поеду</p>
+                <h1>Куда я поеду сразу, как можно будет куда-то поехать </h1>
+            </div>
+            <img src="./images/intro-image.jpeg" alt="Фото с изображением самолёта" class="content__img">
+        </div>
+
+
+        <nav class="nav nav_bottom">
+            <ul class="nav__links">
+                <li class="nav__link"><a href="#" class="link_decoration">Мечты</a></li>
+                <li class="nav__link"><a href="#" class="link_decoration">Ожидания</a></li>
+                <li class="nav__link"><a href="#"class="link_decoration">Реальность</a></li>
+            </ul>
+            <a href="#" class="nav__complain link_decoration">Пожаловаться</a>
+        </nav>
+
+    </section>
 </body>
 </html>
