--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="nav__item"><a href="#"class="nav__link">Реальность</a></li>
             </ul>
         </nav>
-        <button class="button button_service"><a href="#" class="nav__link">Пожаловаться</a></li> <!--service потому что в теории сюда можно добавить еще служ ссылок-->
+        <button class="button button_service"><a href="#" class="nav__link">Пожаловаться</a></button> <!--service потому что в теории сюда можно добавить еще служ ссылок-->
     </header>
     <main>
         <section class="welcome">
