--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
-    <link rel="stylesheet" href="./vendor/fonts/fonts.css"> <!--нам точно еще bold понадобится подключи их сразу все пожалуйста-->
+    <link rel="stylesheet" href="./vendor/fonts/fonts.css"> 
     <title>Куда я поеду</title>
 </head>
-<!--давай сразу структуру css файлом соблюдать и сразу в нужные места 
-писать, иначе потом мучительно больно общий файл разбирать- зачем двойная работа
-А зачем 2 навигации? она одна и ссылками, потому что ссылки ведут на новые страницы. 
-А вот "пожаловаться", правильнее, наверное, кнопкой сделать, т.к. страница та же, а это вызов формы
-Вообще на будущее поменяй себе в настройках табуляцию на 2 пробела, а не 4,
- так в кодгайде (или как это назыввается) Практикума указано, да и код красивее выглядит
--->
 <body class="page"> 
     <header class="header">
-        <nav class="nav"> <!--у нас ведь 1 навигация. зачем 2 класс?-->
+        <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#" class="nav__link">Мечты</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Ожидания</a></li>
@@ -33,8 +26,7 @@
                 <p class="welcome__subtitle">Куда я поеду сразу, как можно будет куда-то поехать</p> <!--это точно слишком пространно для заколовка первого уровня имхо-->
             </div>
             <img src="../team-project/images/intro-image.jpeg" alt="Фото с изображением самолёта" class="welcome__img two-columns__img"> 
-            <!--вот чтобы потом ссылки не переписывать, лучше сразу по бэм и соблюдать файловую структуру-->
-        </section>
+        git add</section>
         <section class="forest two-columns">
             <div class="two-columns__text">
                 <h2 class="forest__title two-columns__title">Поеду в лес</h2>
