--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 -->
 
 <body class="page">
-        <header class="header">
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Мечты</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Ожидания</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Реальность</a></li>
-                </ul>
-                <button class="button button_service"><a href="#" class="nav__link">Пожаловаться</a></button>
-            </nav>
-            <section class="welcome">
-                <div class="welcome__text two-columns__text">
-                    <h1 class="welcome__title">Куда я поеду</h1>
-                    <p class="welcome__subtitle">Куда я поеду сразу, как можно будет куда-то поехать</p>
-                    <!--это точно слишком пространно для заколовка первого уровня имхо-->
-                </div>
-                <img src="../team-project/images/intro-image.jpeg" alt="Фото с изображением самолёта"
-                    class="welcome__img two-columns__img">
-            </section>
-        </header>
+    <header class="header">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#" class="nav__link">Мечты</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Ожидания</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Реальность</a></li>
+            </ul>
+            <button class="button button_service"><a href="#" class="nav__link">Пожаловаться</a></button>
+        </nav>
+        <section class="welcome">
+            <div class="welcome__text two-columns__text">
+                <h1 class="welcome__title">Куда я поеду</h1>
+                <p class="welcome__subtitle">Куда я поеду сразу, как можно будет куда-то поехать</p>
+                <!--это точно слишком пространно для заколовка первого уровня имхо-->
+            </div>
+            <img src="../team-project/images/intro-image.jpeg" alt="Фото с изображением самолёта"
+                class="welcome__img two-columns__img">
+        </section>
+    </header>
     <main>
-       <!--- <section class="forest two-columns">
+        <!--- <section class="forest two-columns">
             <div class="two-columns__text">
                 <h2 class="forest__title two-columns__title">Поеду в лес</h2>
                 <p class="forest__paragraf two-columns__paragraf">Лес — экологическая система, биоценоз, в которой
@@ -62,7 +62,7 @@
         </section>
         <section class="sea two-columns">
             <div class="two-columns__text">
-                <h2 class="sea__title two-columns__title">Поеду на Чёрное море</h2>
+                <h2 class="sea__title two-columns__title"></h2>
                 <p class="sea__paragraf two-columns__paragraf">Я уплыву туда, где ни разу я не был, туда, где никто
                     раньше не был.
                     Никто и никогда раньше не был, я уплыву. Я позову тебя смотреть на синее небо и пить по капле синее
@@ -84,8 +84,8 @@
 
     </footer> --->
 
-    <section class="main">
-        <div class="two-columns">
+        <section class="main">
+            <div class="two-columns">
                 <img src="./images/places-forest.jpeg" alt="Фотография водопада" class="place__image">
                 <div class="place__text">
                     <h2 class="place__title">Поеду в лес</h2>
@@ -94,11 +94,45 @@
                             главной жизненной формой являются деревья.</p>
                         <p class="place__paragraph">Лес — составная часть природы, понятие «лес» можно
                             рассматривать на разных уровнях. В глобальном масштабе — это часть
-                            биосферы, в локальном — это может быть насаждение. Леса занимают около трети площади суши.</p>
+                            биосферы, в локальном — это может быть насаждение. Леса занимают около трети площади суши.
+                        </p>
                     </div>
                 </div>
-        </div>
-    </section>
+            </div>
+            <div class="two-columns">
+                <div class="place__text">
+                    <h2 class="place__title">Поеду в горы</h2>
+                    <div>
+                        <p class="place__paragraph">Горные системы занимают 64 % поверхности Азии, 36 %
+                            — Северной Америки, 25 % — Европы,
+                            22 % — Южной Америки, 17 % — Австралии и 3 % — Африки. В целом 24 % земной поверхности
+                            приходится на горы. 10 % всех людей живёт на территории гор. В горах берёт своё начало
+                            большинство
+                            рек Земли.</p>
+                    </div>
+                </div>
+                <img src="./images/places-mountains.jpeg" alt="Фотография гор" class="place__image">
+            </div>
+            <div class="two-columns">
+                <img src="./images/places-black-sea.jpeg" alt="Фотография Чёрного моря" class="place__image">
+                <div class="place__text">
+                    <h2 class="place__title">Поеду на Чёрное море</h2>
+                    <div>
+                        <p class="place__paragraph">Я уплыву туда, где ни разу я не был, туда, где никто
+                            раньше не был.
+                            Никто и никогда раньше не был, я уплыву. Я позову тебя смотреть на синее небо и пить по
+                            капле синее
+                            небо, и
+                            падать в это синее небо, я позову.</p>
+                        <p class="place__paragraph">Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на
+                            Чёрное-Чёрное море уеду я. Уеду я на Чёрное-Чёрное море, на Чёрное-Чёрное море, на
+                            Чёрное-Чёрное
+                            море.</p>
+                        <p class="place__paragraph">Уеду я.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 
 </html>
