добавить кнопку обратной связи

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <li class="nav__item"><a href="#" class="nav__link">Ожидания</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Реальность</a></li>
                 </ul>
-                <button class="button button_service"><a href="#" class="nav__link">Пожаловаться</a></button>
+                <button class="button"><span class="button__text">Пожаловаться</span> 
+                    <img class="button__img" alt="" src="./images/email.svg"></button>
             </nav>
             <section class="welcome">
                 <div class="welcome__text two-columns__text">
