--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
             <img src="../team-project/images/intro-image.jpeg" alt="Фото с изображением самолёта"
                 class="welcome__img two-columns__img">
         </section>
+
+        <div class="form">
+            <div class="form__content">
+                <p class="form__complain">Пожаловаться</p>
+                <button type="button" class="form__close">&times;</button>
+            </div>
+            <form action="URL" class="form__inputs">
+                <input type="text" placeholder="Введите причину обращения" class="form__text">
+                <textarea type="text" placeholder="Введите текст обращения" class="form__textarea"></textarea>
+                <input type="text" placeholder="Введите ваше имя" class="form__text">
+                <input type="text" placeholder="Введите ваш e-mail" class="form__text">
+                <div class="form__buttons">
+                    <button type="reset" class="form__button">Сбросить</button>
+                    <button type="submit" class="form__button">Отправить</button>
+                </div>
+            </form>
+        </div>
+        
     </header>
     <main>
         <!--- <section class="forest two-columns">
@@ -133,6 +151,38 @@
                 </div>
             </div>
         </section>
+
+        <section class="people-says">
+            <div class="people">
+                <div class="people__text">
+                    <h3 class="people__title">Люди</h3>
+                    <p class="people__subtitle">Что говорят и говорили люди о путешествиях</p>
+                </div>
+            </div>
+
+            <div class="people-grid">
+                <div class="people-grid__column">
+                    <p class="people-grid__name">Иван Бунин</p>
+                    <p class="people-grid__text">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.</p>
+                </div>
+                <div class="people-grid__column">
+                    <p class="people-grid__name">Альбер Камю</p>
+                    <p class="people-grid__text">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.</p>
+                </div>
+                <div class="people-grid__column">
+                    <p class="people-grid__name">Норвежская пословица</p>
+                    <p class="people-grid__text">Лишь тот, кто странствует, открывает новые пути.</p>
+                </div>
+                <div class="people-grid__column">
+                    <p class="people-grid__name">Мария Захарова</p>
+                    <p class="people-grid__text">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень рискованное предприятие.</p>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <p class="footer__copyright">&copy; 2021</p>
+        </footer>
 </body>
 
 </html>
