добавить действия на кнопки в навигации

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     <li class="nav__item"><a href="#" class="nav__link">Ожидания</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Реальность</a></li>
                 </ul>
-                <button class="button"><span class="button__text">Пожаловаться</span> 
-                    <img class="button__img" alt="" src="./images/email.svg"></button>
+                <button class="nav__button"><span class="nav__letter-text">Пожаловаться</span> 
+                    <img class="nav__letter-img" alt="" src="./images/email.svg"></button>
+                
             </nav>
             <section class="welcome">
                 <div class="welcome__text two-columns__text">
@@ -109,7 +110,6 @@
                     <p class="people__subtitle">Что говорят и говорили люди о путешествиях</p>
                 </div>
             </div>
-
             <div class="people-grid">
                 <div class="people-grid__column">
                     <p class="people-grid__name">Иван Бунин</p>
@@ -129,10 +129,10 @@
                 </div>
             </div>
         </section>
-
-        <footer class="footer">
-            <p class="footer__copyright">&copy; 2021</p>
-        </footer>
+    <footer class="footer">
+        <p class="footer__copyright">&copy; 2021</p>
+    </footer>
+    <script src="./index.js"></script>
 </body>
 
 </html>
