--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 
             </nav>
             <section class="welcome">
-                <div class="welcome__text two-columns__text">
+                <div class="welcome__text">
                     <h1 class="welcome__title">Куда я поеду</h1>
                     <p class="welcome__subtitle">Куда я поеду сразу, как можно будет куда-то поехать</p>
                 </div>
                 <img src="../team-project/images/intro-image.jpeg" alt="Фото с изображением самолёта"
-                    class="welcome__img two-columns__img">
+                    class="welcome__img">
             </section>
         </header>
         <div class="form">
@@ -54,7 +54,7 @@
     </header>
     <main>
     <section class="main">
-        <div class="two-columns">
+        <div class="place">
                 <img src="./images/places-forest.jpeg" alt="Фотография водопада" class="place__image">
                 <div class="place__text">
                     <h2 class="place__title">Поеду в лес</h2>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div class="two-columns">
+            <div class="place">
                 <div class="place__text">
                     <h2 class="place__title">Поеду в горы</h2>
                     <div>
@@ -82,7 +82,7 @@
                 </div>
                 <img src="./images/places-mountains.jpeg" alt="Фотография гор" class="place__image">
             </div>
-            <div class="two-columns">
+            <div class="place">
                 <img src="./images/places-black-sea.jpeg" alt="Фотография Чёрного моря" class="place__image">
                 <div class="place__text">
                     <h2 class="place__title">Поеду на Чёрное море</h2>
