--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h1 class="welcome__title">Куда я поеду</h1>
                     <p class="welcome__subtitle">Куда я поеду сразу, как можно будет куда-то поехать</p>
                 </div>
-                <img src="../team-project/images/intro-image.jpeg" alt="Фото с изображением самолёта"
+                <img src="./images/intro-image.jpeg" alt="Фото с изображением самолёта"
                     class="welcome__img">
             </section>
         </header>
